--- a/desafio-01/src/StarBackground.css
+++ b/desafio-01/src/StarBackground.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height:100%;
-    background: linear-gradient(to left,#070707,#113546,#102b3d,#113546,#0a0a0a);
+    background: linear-gradient(to left,#0a0a0a,#113546,#144668,#113546,#0a0a0a);
     overflow: hidden;
     z-index: -1;
   }
@@ -27,8 +27,9 @@
     height: 2px;
     background-color: white;
     border-radius: 50%;
-    animation: star-movement-2 5s linear infinite;
-    animation-delay: calc(5s * var(--y));
+    animation: star-movement-2 100s ease-in-out infinite;
+  
+    animation-fill-mode: backwards;
   }
   @keyframes star-flicker {
     0% {
@@ -53,10 +54,20 @@
 
   
   @keyframes star-movement-2 {
+    
     0% {
       top: calc(100% * var(--y));
+      left: calc(100vw * var(--x));
+    }
+    10% {
+      opacity: 1;
+    }
+    90% {
+      opacity: 1;
     }
     100% {
-      top: 0%;
+      top: calc(200% * var(--y));
+      left: calc(100vw * var(--x));
     }
   }
+  
