criando formulario de contato dinamico entrada para banco de dados console log para verificar se os dados estão sendo guardados proximos passos: adicionar verificação se todos os campos foram preenchidos e condição de ddd e 9 numeros para o whatsApp

--- a/desafio-01/src/Header.css
+++ b/desafio-01/src/Header.css
@@ -15,6 +15,7 @@
     transition: top 5s ease-in-out;
     backdrop-filter: blur(8px);
     z-index: 333333333;
+    transition: top 0.6s ease-in-out;
    
 }
 .menu_options_desktop ul{
