--- a/desafio-01/src/Corpo.css
+++ b/desafio-01/src/Corpo.css
@@ -15,7 +15,7 @@
   }
   .Corpo{
     width: 100%;
-    max-width: 1000px;
+    max-width: 900px;
     margin: 0 auto;
     box-sizing: border-box;
 }
@@ -31,7 +31,7 @@
 .text_description{
 
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     color: white;
     width: 100%;
     font-size: 20px;
@@ -49,7 +49,122 @@
 }
 .text_description p{
     font-family:'Bropotic' ;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+}
+
+.text_description span{
+    box-shadow:  inset 100% 0px -2px 0px 0px  rgba(86, 205, 241, 0.8);
+    animation: border-movement 3s linear infinite;
+    text-align: left;
+
+}
+/*ANIMAÇÃO DOS CARDS DE SERVIÇOS PRESTADOS */
+.flip-card{
+
+    display: flex;
+    flex-direction:row;
+    color:black;
+    width: 100%;
+    font-size: 20px;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 80px;
+    background-color: transparent;
+
+}
+
+.flip-card p{
+    font-family: 'Bebas_Neue';
+    font-family:'Bropotic' ;
+    margin-bottom: 10px;
+    font-size: 15px;
+    color: white;
+    text-align: justify;
+    padding: 0 20px;
+}
+
+.flip-card span{
+    font-family: 'Bebas_Neue';
+    color: white;
+    font-size: 18px;
+    box-shadow:  inset 100% 0px -2px 0px 0px  rgba(86, 205, 241, 0.8);
+    animation: border-movement 3s linear infinite;
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 20px;
+   
+}
+.flip-card a{
+    position: absolute;
+    top:200px;
+    font-family: 'Bebas_Neue';
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    border: 1px solid white;
+    border-radius: 8px;
+    padding: 5px 10px;
+}
+.Flip-card-flex{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;        
+
+   
+}
+.flip-card-inner{
+    margin:40px 25px;
+    width: 400px;
+    border-radius: 8px;
+    background-color: rgba( 0, 0, 0, 0.6);
+    height: 250px;
+    border:1px solid white;
+    transform-style: preserve-3d;
+    background-image: url(./img/image03.jpeg);
+    background-position: center;
+    background-size:cover;
+    background-repeat: no-repeat;
+
+    
+}
+.flip-card-inner:nth-child(2){
+    background-image: url(./img/image02.jpeg);
+}
+
+.flip-card-inner:nth-child(3){
+    background-image: url(./img/image01.jpg);
+}
+.flip-card-inner:nth-child(4){
+    background-image: url(./img/image04.jpg);
+}
+.flip-card{
+    display:none;
+}
+
+.flip-card-inner:hover{
+    transform: rotateY(180deg);
+    background-image:none;
+
+    .flip-card{
+        display: flex;
+        flex-direction: column;
+        transform: rotateY(180deg);
+        transition: ease-in-out 0.6s;
+        transform-style: preserve-3d;
+    }
+}
+
+
+
+
+
+
+@keyframes border-movement{
+    0% {box-shadow:inset 0 -2px 0 0  rgba(86, 205, 241, 0.3);}
+    100% {box-shadow:inset 100% -2px 0 0 0  rgba(86, 205, 241, 0.6);}
+    
 }
 .text_description a{
     font-family:'Bropotic' ;
@@ -66,6 +181,18 @@
     text-align: justify;
     font-family: 'Bebas_Neue';
 }
+#typed-text {
+    overflow: hidden; /* Esconde o texto que ainda não foi digitado */
+    white-space: nowrap; /* Impede quebra de linha */
+    animation: typing 8s ease-in-out infinite; /* Define a animação de digitação */
+    
+  }
+  
+  @keyframes typing {
+    from { width: 0; } /* Começa com a largura 0, ou seja, sem texto visível */
+    to { width: 100%; } /* Aumenta gradualmente a largura até o texto completo */
+  }
+
 .video_description{
     width: 600px;
     text-align:center;
@@ -111,4 +238,53 @@
     font-family: 'Bebas_Neue';
     margin-bottom: 50px;
 
+}
+.Criando_necessidade h3{
+    font-size: 18px;
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: 'Bebas_Neue';
+    margin-bottom: 5px;
+
+}
+.Criando_necessidade{
+    padding-top: 135px;
+}
+.precos{
+    padding-top: 135px;
+}
+
+.precos td{
+border: 1px solid white;
+width: 50%;
+text-align: left;
+color:white;
+font-family: 'Bebas_Neue';
+}
+
+.precos table{
+    height: 600px;
+}
+ .plano h2{
+    text-transform: uppercase;
+    padding:20px 0;
+    border-bottom: 1px solid white;
+    text-align: center;
+    align-items: center;
+    align-content: center;
+}
+.valor h3{
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    margin: 5% auto;
+    
+}
+
+.especific p{
+    padding: 10px 10%;
+    align-content: center;
+    align-items: center;
+    
 }
