--- a/desafio-01/src/Header.css
+++ b/desafio-01/src/Header.css
@@ -57,11 +57,12 @@
     height: auto;
     margin-left: 3%;
 }
+@media screen and (max-width:756px) {
+    .Header{
+        display: none;
+    }
 
-
-
-
-
+}
 
 
 
