*neste commit desenvolvi o formulario de contato, proximos passos criar as validações de cada item do mesmo
*hover em imagens para criar um efeito moderno

--- a/desafio-01/src/FormComponent.css
+++ b/desafio-01/src/FormComponent.css
@@ -31,3 +31,14 @@
     text-transform: uppercase;
     margin-bottom: 30px;
 }
+.form-box textarea{
+    width: 300px;
+    border-radius: 10px;
+    height: 250px;
+    color: black;
+    font-family: 'Bebas_Neue';
+    font-size: 15px;
+    padding: 5px 10px;
+    margin-bottom: 20px;
+
+}
