--- a/desafio-01/src/FormComponent.css
+++ b/desafio-01/src/FormComponent.css
@@ -2,15 +2,20 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    justify-items: center;
     margin-top: 80px;
-    background-color: transparent;
     border: 1px solid white;
     color: white;
     font-family: 'Bebas_Neue';
     padding: 60px 40px;
     width: 100%;
     text-align: justify;
-    align-items: center;
+    align-items: flex-end;
+    background-image:url(./img/iafeminina2.jpeg);
+    transition: background-image 0.5s ease;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: #0F1620;
 }
 
 .form-box input{
@@ -23,22 +28,42 @@
 }
 
 .form-box button{
+    display: flex;
     padding: 8px 10px;
     border-radius: 10px;
     text-transform: uppercase;
+    align-items: center;
+    text-align: center;
+    display: block;
+    color: white;
+    background-color: transparent;
+    
 }
 .form-box h2{
+    width: 300px;
+    display: flex;
+    display: block;
     text-transform: uppercase;
+    text-align: center;
     margin-bottom: 30px;
 }
 .form-box textarea{
+    min-width: 300px;
+    max-width: 300px;
     width: 300px;
     border-radius: 10px;
-    height: 250px;
+    height: 200px;
+    max-height: 200px;
     color: black;
     font-family: 'Bebas_Neue';
     font-size: 15px;
     padding: 5px 10px;
     margin-bottom: 20px;
+
+}
+.error-message{
+    color: rgb(253, 5, 5);
+    font-size: 20px;
+
 
 }
