--- a/desafio-01/src/Footer.css
+++ b/desafio-01/src/Footer.css
@@ -2,5 +2,87 @@
     margin-top: 80px;
     width: 100%;
     height: 300px;
-    background-color: white;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
+}
+.social_icons a{
+    background-color: transparent;
+    font-size: 30px;
+    color:white;
+    padding-left: 20px;
+    width: 100%;
+
+}
+.menu_options_desktop_footer ul{
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    list-style-type: none;
+    text-decoration: none;
+    margin-right: 2%;
+    text-align: justify;
+    backdrop-filter: blur(8px);
+
+}
+.menu_options_desktop_footer li{
+    width: 80%;
+    display:block;
+    list-style-type: none;
+    text-decoration: none;
+    padding-bottom: 20px;
+    text-align: justify;
+   
+
+}
+.menu_options_desktop_footer a{
+     width: 80%;
+    text-align: justify;
+    color:white;
+    font-size:20px;
+    text-transform: uppercase;
+    margin-right: 5px;
+    text-decoration: none;
+    font-family: 'Bebas_Neue';
+
+}
+.menu_options_desktop_footer{
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+     width: 100%;
+    align-items:center;
+    margin-bottom:50px;
+
+}
+.social_icons img{
+    display: flex;
+    width:150px;
+    height: auto;
+    margin-left: 42%;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.menu_options_desktop_footer h2{
+    text-transform: uppercase;
+    color: white;
+    padding-bottom: 30px;
+    margin-top: 200px;
+    font-size: 30px;
+}
+.social_icons {
+width: 100%;
+text-align: center;
+    text-transform: uppercase;
+    color: white;
+    font-size: 15px;
+
 }
