--- a/desafio-01/src/Header.css
+++ b/desafio-01/src/Header.css
@@ -12,7 +12,6 @@
 .Header{
     display: flex;
     width:100%;
-    transition: top 5s ease-in-out;
     backdrop-filter: blur(8px);
     z-index: 333333333;
     transition: top 0.6s ease-in-out;
@@ -29,17 +28,24 @@
 
 }
 .menu_options_desktop li{
+    width: 80%;
     display:inline-block;
     list-style-type: none;
     text-decoration: none;
+   
+
 }
 .menu_options_desktop a{
+     width: 80%;
+
     color:white;
+    font-size:30px;
     text-transform: uppercase;
     margin-right: 25px;
     font-size:20px;
     text-decoration: none;
     font-family: 'Bebas_Neue';
+
 }
 .menu_options_desktop{
     display: flex;
@@ -55,7 +61,8 @@
     display: flex;
     width:150px;
     height: auto;
-    margin-left: 3%;
+    margin-left: 5%;
+    z-index: 9999999999999999;
 }
 @media screen and (max-width:756px) {
     .Header{
