--- a/desafio-01/src/Menu.css
+++ b/desafio-01/src/Menu.css
@@ -68,11 +68,12 @@ header {
     transform: translateX(-200px);
     transition: transform 0.3s ease;
     border-radius: 8px;
+    z-index: 99;
   }
   .menu_toggle{
     position:absolute;
-    z-index: 9999 !important;
-    top: 30px;
+    z-index: 99;
+    top: 40px;
     left: 250px;
     font-size: 30px;
     border: 0;
