--- a/desafio-01/src/StarBackground.css
+++ b/desafio-01/src/StarBackground.css
@@ -5,9 +5,26 @@
     width: 100%;
     height:100%;
     background: radial-gradient(circle,#0a0a0a,#174053,#081c29,#0f0f0f,black);
+   
+
     overflow: hidden;
-    z-index: -1;
+    z-index: -10;
   }
+.background{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height:100%;
+  background-image: url(./img/semfundofeminia.png);
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 130% 20px; 
+z-index: -9;
+
+}
+
   
   .star {
     position: absolute;
